# pygullian-codegen

./: .gitignore  README.md  main.py  pyproject.toml
examples/: hello_world.gullian
gullian_codegen/: __init__.py  codegen_c.py
std/: err.gullian  fmt.gullian  sys.gullian
